# ai-feedback-generator

./: CLAUDE.md  README.md  pyproject.toml
backend/: config.example.yaml  controller.py  feedback_layer.py  logger_service.py  main.py  requirements.txt
backend/api/: server.py  websocket_server.py
backend/core/: runtime_controller.py
backend/layers/: __init__.py  feedback_layer.py
backend/llm/: __init__.py  base.py  development_client.py  factory.py  openai_client.py
backend/services/: logger_service.py
backend/types/: __init__.py  config.py  domain_events.py  messages.py
vscode-extension/: package.json
vscode-extension/src/: extension.ts  feedback-renderer.ts  status-bar.ts  types.ts  webview-provider.ts
vscode-extension/src/utils/: typeguard.ts
vscode-extension/webview-ui/: package.json
vscode-extension/webview-ui/src/: App.tsx  types.ts
vscode-extension/webview-ui/src/components/: Controls.tsx  FeedbackList.tsx  StatusPanel.tsx
