[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-feedback-generator"
version = "0.1.0"
description = "Continuously generates LLM-based feedback based on VS Code editor context"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.0.0",
    "openai>=1.0.0",
]

[project.scripts]
ai-feedback-backend = "backend.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
